unpackaged/main/default/objects/ServiceAppointment/ServiceAppointment.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>