unpackaged/main/default/objects/ServiceAppointment/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <formula>Contact.Account.Account_Reference__c</formula>
    <label>Account Reference</label>
    <type>Text</type>
</CustomField>