unpackaged/main/default/objects/ServiceAppointment/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>TEXT(Account.Account_Type__c)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>