unpackaged/main/default/objects/ServiceAppointment/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>TextArea</type>
</CustomField>