unpackaged/main/default/objects/ServiceAppointment/fields/Allocated_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>