unpackaged/main/default/objects/ServiceAppointment/fields/Allocated_Engineer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Engineer_First_Name__c</fullName>
    <formula>Allocated_Engineer__r.FirstName__c</formula>
    <label>Allocated Engineer First Name</label>
    <type>Text</type>
</CustomField>