unpackaged/main/default/objects/ServiceAppointment/fields/Allocated_Engineer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Engineer_Last_Name__c</fullName>
    <formula>Allocated_Engineer__r.LastName__c</formula>
    <label>Allocated Engineer Last Name</label>
    <type>Text</type>
</CustomField>