unpackaged/main/default/objects/ServiceAppointment/fields/Allocated_Engineer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Engineer_Mobile__c</fullName>
    <formula>Allocated_Engineer__r.Mobile_No__c</formula>
    <label>Allocated Engineer Mobile</label>
    <type>Text</type>
</CustomField>