unpackaged/main/default/objects/ServiceAppointment/fields/Assigned_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Engineer__c</fullName>
    <description>This will be the name of the engineer on the Assigned Resource</description>
    <label>Assigned Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>