unpackaged/main/default/objects/ServiceAppointment/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created on the request of Alex Bacon</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments2</relationshipName>
    <type>Lookup</type>
</CustomField>