unpackaged/main/default/objects/ServiceAppointment/fields/Attendance_Notes_for_Office__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Notes_for_Office__c</fullName>
    <label>Attendance Notes for Office</label>
    <length>2010</length>
    <type>LongTextArea</type>
</CustomField>