unpackaged/main/default/objects/ServiceAppointment/fields/Attendance_Report_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Report_for_Customer__c</fullName>
    <label>Attendance Report for Customer</label>
    <length>2010</length>
    <type>LongTextArea</type>
</CustomField>