unpackaged/main/default/objects/ServiceAppointment/fields/Awaiting_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Service_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to be used within the Update Status - Engineer Flow to check whether the Service Report has been generated before job completion.</description>
    <label>Awaiting Service Report</label>
    <type>Checkbox</type>
</CustomField>