unpackaged/main/default/objects/ServiceAppointment/fields/Balance_Received__c.field-meta.xml
<CustomField>
    <fullName>Balance_Received__c</fullName>
    <label>Deposit Invoice Balance Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>