unpackaged/main/default/objects/ServiceAppointment/fields/Book_Online_URL__c.field-meta.xml
<CustomField>
    <fullName>Book_Online_URL__c</fullName>
    <formula>Work_Order__r.Book_Online_URL__c</formula>
    <label>Book Online URL</label>
    <type>Text</type>
</CustomField>