unpackaged/main/default/objects/ServiceAppointment/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <formula>TEXT(Work_Order__r.Booking_Type__c)</formula>
    <label>Booking Type</label>
    <type>Text</type>
</CustomField>