unpackaged/main/default/objects/ServiceAppointment/fields/Cancellation_Fee_Applied__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Applied__c</fullName>
    <formula>IF(Cancellation_Fine__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Cancellation Fee Applied</label>
    <type>Text</type>
</CustomField>