unpackaged/main/default/objects/ServiceAppointment/fields/Cancellation_Fine__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the Cancellation of the SA is within 2 hours of the original a fine will be assigned.</description>
    <label>Cancellation Fine</label>
    <type>Checkbox</type>
</CustomField>