unpackaged/main/default/objects/ServiceAppointment/fields/Cancellation_Invoice_Raised__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Invoice_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Invoice Raised</label>
    <type>Checkbox</type>
</CustomField>