unpackaged/main/default/objects/ServiceAppointment/fields/Cancellation_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Time__c</fullName>
    <label>Cancellation Time</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>