unpackaged/main/default/objects/ServiceAppointment/fields/Cancellation_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Time_Stamp__c</fullName>
    <label>Cancellation Time Stamp</label>
    <type>DateTime</type>
</CustomField>