unpackaged/main/default/objects/ServiceAppointment/fields/Charge_List_Price_Services__c.field-meta.xml
<CustomField>
    <fullName>Charge_List_Price_Services__c</fullName>
    <formula>Work_Order__r.CCT_Charge_List_Price_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge List Price Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>