unpackaged/main/default/objects/ServiceAppointment/fields/Client_Industry__c.field-meta.xml
<CustomField>
    <fullName>Client_Industry__c</fullName>
    <description>Fetching Industry filed from Account</description>
    <formula>TEXT( Account.Client_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Industry</label>
    <type>Text</type>
</CustomField>