unpackaged/main/default/objects/ServiceAppointment/fields/Comms_Control_Booking_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Booking_Confirmation__c</fullName>
    <formula>Account.Comms_Control_Online_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comms Control Booking Confirmation</label>
    <type>Checkbox</type>
</CustomField>