unpackaged/main/default/objects/ServiceAppointment/fields/Comms_Control_In_transit_text__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_In_transit_text__c</fullName>
    <formula>Account.Comms_Control_In_transit_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comms Control In transit text</label>
    <type>Checkbox</type>
</CustomField>