unpackaged/main/default/objects/ServiceAppointment/fields/Company_Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Number__c</fullName>
    <label>Company Registered Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>