unpackaged/main/default/objects/ServiceAppointment/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <formula>Contact.FirstName</formula>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>