unpackaged/main/default/objects/ServiceAppointment/fields/Count_of_Assigned_Resources__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Assigned_Resources__c</fullName>
    <label>Count of Assigned Resources</label>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>