unpackaged/main/default/objects/ServiceAppointment/fields/Created_by_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile_Name__c</fullName>
    <description>The name of the Profile of the User that created this Service Appointment</description>
    <formula>CreatedBy.Profile.Name</formula>
    <inlineHelpText>The name of the Profile of the User that created this Service Appointment</inlineHelpText>
    <label>Created by Profile Name</label>
    <type>Text</type>
</CustomField>