unpackaged/main/default/objects/ServiceAppointment/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <label>Customer Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>