unpackaged/main/default/objects/ServiceAppointment/fields/Customer_preffered_rate__c.field-meta.xml
<CustomField>
    <fullName>Customer_preffered_rate__c</fullName>
    <description>This is the Customer selected rate if this job is online booked</description>
    <formula>Work_Order__r.Online_Booking__r.Hourly_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer preffered rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>