unpackaged/main/default/objects/ServiceAppointment/fields/Customer_Review_Operative_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review_Operative_Score__c</fullName>
    <description>Based on the &#39;Review Star Rating&#39; - 5 Stars = 5 points, 4 Stars = 2 points, 3 Stars = 0 points, 2 Stars = -2 points and 1 Star = -5 points.</description>
    <formula>CASE(TEXT(Review_Star_Rating__c),

&#39;5&#39;, 5,

&#39;4&#39;, 2,

&#39;3&#39;, 0,

&#39;2&#39;, -2,

&#39;1&#39;, -5,


NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the &#39;Review Star Rating&#39; - 5 Stars = 5 points, 4 Stars = 2 points, 3 Stars = 0 points, 2 Stars = -2 points and 1 Star = -5 points.</inlineHelpText>
    <label>Customer Review Operative Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>