unpackaged/main/default/objects/ServiceAppointment/fields/Customers_Review_Text__c.field-meta.xml
<CustomField>
    <fullName>Customers_Review_Text__c</fullName>
    <label>Customers Review Text</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>