unpackaged/main/default/objects/ServiceAppointment/fields/Decision_Making__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making__c</fullName>
    <label>Decision Making</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Appointment_Performance</valueSetName>
    </valueSet>
</CustomField>