unpackaged/main/default/objects/ServiceAppointment/fields/Email_Booking_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Booking_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Booking Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>