unpackaged/main/default/objects/ServiceAppointment/fields/Email_Dispatched_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Dispatched_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Dispatched Sent</label>
    <type>Checkbox</type>
</CustomField>