unpackaged/main/default/objects/ServiceAppointment/fields/Email_In_Transit_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_In_Transit_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email In Transit Sent</label>
    <type>Checkbox</type>
</CustomField>