unpackaged/main/default/objects/ServiceAppointment/fields/Engineer_Pay_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Pay_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer Pay Requisition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Engineer_Pay_Requisition__c.Service_Resource__c</field>
            <operation>equals</operation>
            <valueField>$Source.Allocated_Engineer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Engineer_Pay_Requisition__c.Work_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Work_Order__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Engineer_Pay_Requisition__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>