unpackaged/main/default/objects/ServiceAppointment/fields/Engineer_Role__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Role__c</fullName>
    <description>This will be from the Assigned Resources</description>
    <label>Engineer Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>