unpackaged/main/default/objects/ServiceAppointment/fields/EPR_Pay_Total__c.field-meta.xml
<CustomField>
    <fullName>EPR_Pay_Total__c</fullName>
    <description>Engineer Pay Requisition Pay Total</description>
    <formula>Engineer_Pay_Requisition__r.Pay_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Engineer Pay Requisition Pay Total</inlineHelpText>
    <label>EPR - Pay Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>