unpackaged/main/default/objects/ServiceAppointment/fields/EPR_Status__c.field-meta.xml
<CustomField>
    <fullName>EPR_Status__c</fullName>
    <description>Status of the Engineer Pay Requisition</description>
    <formula>TEXT( Engineer_Pay_Requisition__r.Status__c )</formula>
    <inlineHelpText>Status of the Engineer Pay Requisition</inlineHelpText>
    <label>EPR - Status</label>
    <type>Text</type>
</CustomField>