unpackaged/main/default/objects/ServiceAppointment/fields/Expected_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Time__c</fullName>
    <formula>TIMEVALUE( 
LEFT( RIGHT(Scheduled_Start_TEXT__c, 5), 2) + 
&quot;:&quot; + 
RIGHT(RIGHT(Scheduled_Start_TEXT__c, 5), 2) + 
&quot;:00.000&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Arrival Time</label>
    <type>Time</type>
</CustomField>