unpackaged/main/default/objects/ServiceAppointment/fields/Field_Support_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_Achieved__c</fullName>
    <label>Field Support Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote Managed</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>