unpackaged/main/default/objects/ServiceAppointment/fields/Field_Support_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_Review_Score__c</fullName>
    <formula>IF(TEXT(Workmanship__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Workmanship__c)=&#39;Good&#39;,2,
IF(TEXT(Workmanship__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Workmanship__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Workmanship__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Decision_Making__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Decision_Making__c)=&#39;Good&#39;,2,
IF(TEXT(Decision_Making__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Decision_Making__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Decision_Making__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Communication__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Communication__c)=&#39;Good&#39;,2,
IF(TEXT(Communication__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Communication__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Communication__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Manners__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Manners__c)=&#39;Good&#39;,2,
IF(TEXT(Manners__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Manners__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Manners__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Tooling__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Tooling__c)=&#39;Good&#39;,2,
IF(TEXT(Tooling__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Tooling__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Tooling__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Vehicle__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Vehicle__c)=&#39;Good&#39;,2,
IF(TEXT(Vehicle__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Vehicle__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Vehicle__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Technical_Knowledge__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Technical_Knowledge__c)=&#39;Good&#39;,2,
IF(TEXT(Technical_Knowledge__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Technical_Knowledge__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Technical_Knowledge__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Use_Of_App_Forms__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Use_Of_App_Forms__c)=&#39;Good&#39;,2,
IF(TEXT(Use_Of_App_Forms__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Use_Of_App_Forms__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Use_Of_App_Forms__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Sales_Approach__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Sales_Approach__c)=&#39;Good&#39;,2,
IF(TEXT(Sales_Approach__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Sales_Approach__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Sales_Approach__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Attitude__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Attitude__c)=&#39;Good&#39;,2,
IF(TEXT(Attitude__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Attitude__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Attitude__c)=&#39;Urgent issue&#39;,-5,0)))))
+
IF(TEXT(Uniform__c)=&#39;Perfect&#39;, 5, 
IF(TEXT(Uniform__c)=&#39;Good&#39;,2,
IF(TEXT(Uniform__c)=&#39;Acceptable&#39;,0,
IF(TEXT(Uniform__c)=&#39;Not acceptable&#39;,-2,
IF(TEXT(Uniform__c)=&#39;Urgent issue&#39;,-5,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Support Review Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>