unpackaged/main/default/objects/ServiceAppointment/fields/Franchisee_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_Company_Name__c</fullName>
    <label>Franchisee Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>