unpackaged/main/default/objects/ServiceAppointment/fields/Gross_Value_Of_Job__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value_Of_Job__c</fullName>
    <formula>Work_Order__r.Job__r.Charge_Gross__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Value Of Job</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>