unpackaged/main/default/objects/ServiceAppointment/fields/Hourly_Charge_R1__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Charge_R1__c</fullName>
    <description>Updated from Costs and Charges field of same name</description>
    <label>Hourly Charge R1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>