unpackaged/main/default/objects/ServiceAppointment/fields/Internal_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Internal_EmailID__c</fullName>
    <defaultValue>(&quot;welcometeam@aspect.co.uk&quot;)</defaultValue>
    <label>Internal EmailID</label>
    <type>Email</type>
</CustomField>