unpackaged/main/default/objects/ServiceAppointment/fields/Is_Further_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Further_Work_Required__c</fullName>
    <formula>TEXT(Work_Order__r.Is_Further_Work_Required__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Further Work Required?</label>
    <type>Text</type>
</CustomField>