unpackaged/main/default/objects/ServiceAppointment/fields/Is_This_the_Last_SA_for_WO__c.field-meta.xml
<CustomField>
    <fullName>Is_This_the_Last_SA_for_WO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not required for page layouts just for processes to know if this is the last  SA for this WO</description>
    <inlineHelpText>Not required for page layouts just for processes to know if this is the last  SA for this WO</inlineHelpText>
    <label>Is This the Last SA for WO?</label>
    <type>Checkbox</type>
</CustomField>