unpackaged/main/default/objects/ServiceAppointment/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <formula>Work_Order__r.Job__r.Name</formula>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>