unpackaged/main/default/objects/ServiceAppointment/fields/Job_record_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_record_ID__c</fullName>
    <description>The Job ID related to the Work Order</description>
    <formula>Work_Order__r.Job__c

/*Note for self - do not change this to a casesafe id and 18 chars - it will break things. If you need 18 chars create a new field and clearly label it Job record ID - 18 Chars */</formula>
    <inlineHelpText>The Job ID related to the Work Order</inlineHelpText>
    <label>Job record ID</label>
    <type>Text</type>
</CustomField>