unpackaged/main/default/objects/ServiceAppointment/fields/Latest_Start_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Latest_Start_Permitted__c</fullName>
    <formula>DueDate -  (Duration/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Start Permitted</label>
    <type>DateTime</type>
</CustomField>