unpackaged/main/default/objects/ServiceAppointment/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Work Order Description and Access Details</description>
    <inlineHelpText>Work Order Description and Access Details</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>