unpackaged/main/default/objects/ServiceAppointment/fields/Office_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Office_Feedback__c</fullName>
    <label>Office Feedback</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refused Job</fullName>
            </value>
            <value>
                <fullName>Awol over 1 Hour</fullName>
            </value>
            <value>
                <fullName>Late up to 30 minutes</fullName>
            </value>
            <value>
                <fullName>Late 30-60 mins</fullName>
            </value>
            <value>
                <fullName>Late over 1 hour</fullName>
            </value>
            <value>
                <fullName>Non Conversion</fullName>
            </value>
            <value>
                <fullName>Poor report / document</fullName>
            </value>
            <value>
                <fullName>Poor Behaviour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>