unpackaged/main/default/objects/ServiceAppointment/fields/Office_Feedback_by__c.field-meta.xml
<CustomField>
    <fullName>Office_Feedback_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the person who gave the feedback (who set the &#39;Office Feedback&#39; field)</description>
    <inlineHelpText>The name of the person who gave the feedback (who set the &#39;Office Feedback&#39; field)</inlineHelpText>
    <label>Office Feedback by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>