unpackaged/main/default/objects/ServiceAppointment/fields/Office_Feedback_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Office_Feedback_Date_Time__c</fullName>
    <description>The Date and Time the Feedback was given</description>
    <inlineHelpText>The Date and Time the Feedback was given</inlineHelpText>
    <label>Office Feedback Date/Time</label>
    <type>DateTime</type>
</CustomField>