unpackaged/main/default/objects/ServiceAppointment/fields/Office_Feedback_Score__c.field-meta.xml
<CustomField>
    <fullName>Office_Feedback_Score__c</fullName>
    <description>&#39;Late over 1 hour&#39; = -3, &#39;Non Conversion&#39; = -2, &#39;Poor report / document&#39; = -2, &#39;Poor Behaviour&#39; = -5, &#39;Poor Workmanship&#39; = -3, &#39;Refused Job&#39; = -4, &#39;Awol over 1 Hour&#39; = -4, &#39;Late up to 30 minutes&#39; = -1, &#39;Late 30-60 mins&#39; = -2</description>
    <formula>IF(INCLUDES(Office_Feedback__c, &#39;Late over 1 hour&#39;),-3,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Non Conversion&#39;),-2,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Poor report / document&#39;),-2,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Poor Behaviour&#39;),-5,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Poor Workmanship&#39;),-3,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Refused Job&#39;),-4,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Awol over 1 Hour&#39;),-4,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Late up to 30 minutes&#39;),-1,0)
+
IF(INCLUDES(Office_Feedback__c, &#39;Late 30-60 mins&#39;),-2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&#39;Late over 1 hour&#39; = -3, &#39;Non Conversion&#39; = -2, &#39;Poor report / document&#39; = -2, &#39;Poor Behaviour&#39; = -5, &#39;Poor Workmanship&#39; = -3, &#39;Refused Job&#39; = -4, &#39;Awol over 1 Hour&#39; = -4, &#39;Late up to 30 minutes&#39; = -1, &#39;Late 30-60 mins&#39; = -2</inlineHelpText>
    <label>Office Feedback Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>