unpackaged/main/default/objects/ServiceAppointment/fields/Online_Booking_SA__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when an SA is created through onlinebooking</description>
    <label>Online Booking SA</label>
    <type>Checkbox</type>
</CustomField>