unpackaged/main/default/objects/ServiceAppointment/fields/Op_App_Self__c.field-meta.xml
<CustomField>
    <fullName>Op_App_Self__c</fullName>
    <formula>Work_Order__r.OP_App_Booking_selection__c</formula>
    <label>OP App Booking selection</label>
    <type>Text</type>
</CustomField>