unpackaged/main/default/objects/ServiceAppointment/fields/Original_Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Original_Scheduled_End__c</fullName>
    <description>The original value for Scheduled End Date/Time before the Engineer updated it from their mobile device.</description>
    <inlineHelpText>The original value for Scheduled End Date/Time before the Engineer updated it from their mobile device.</inlineHelpText>
    <label>Original Scheduled End</label>
    <type>DateTime</type>
</CustomField>