unpackaged/main/default/objects/ServiceAppointment/fields/Outcome_of_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Supervision__c</fullName>
    <label>Outcome of Supervision</label>
    <type>TextArea</type>
</CustomField>