unpackaged/main/default/objects/ServiceAppointment/fields/Pay_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pay_Percentage__c</fullName>
    <description>The % of the labour the Operative will receive.</description>
    <inlineHelpText>The % of the labour the Operative will receive.</inlineHelpText>
    <label>Pay %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>