unpackaged/main/default/objects/ServiceAppointment/fields/PO_Number_for_Key_Accounts__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_for_Key_Accounts__c</fullName>
    <formula>Work_Order__r.PO_Number_for_Key_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number for Key Accounts</label>
    <type>Text</type>
</CustomField>