unpackaged/main/default/objects/ServiceAppointment/fields/Post_Visit_Report_Check__c.field-meta.xml
<CustomField>
    <fullName>Post_Visit_Report_Check__c</fullName>
    <description>TQR, Sub standard or Unacceptable</description>
    <inlineHelpText>TQR, Sub standard or Unacceptable</inlineHelpText>
    <label>Post Visit Report Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TQR</fullName>
            </value>
            <value>
                <fullName>Sub standard</fullName>
            </value>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>